# western

code/confidentiality/: CMakeLists.txt  correlation.txt  histo.txt  out.txt
code/confidentiality/src/: image_ppm.h  main.cpp
code/encryption/: CMakeLists.txt
code/encryption/src/: script.sh
code/encryption/src/exp/: main.cpp
code/encryption/src/image/: Image.cpp  Image.h
code/image-evaluator/: .htaccess  a.sh  admin.php  css.css  end.php  histo.py  histo.sh  histo.txt  histo2.txt  image-evaluator.sql  index.php  main.php  out.txt  plot.php  plot.sh  script.sql
code/image-evaluator/python/: main.py  out  sql.txt  sql1_ss_ess_0.5.txt  sql_sob1_20_sob2_20_s1_10_s2_10.txt  sql_sob50_s5.txt  sql_ss_ess_95.txt  sql_ss_ess_95_sum.txt  sql_ss_ess_99.txt  surface3d_demo2.py
code/image-generator/: CMakeLists.txt
code/image-generator/src/: script.rkt
code/image-generator/src/exp/: main.cpp
code/image-generator/src/image/: Image.cpp  Image.h
code/kivy/: editor.kv  gauss.py  main.py  out.txt  results.txt  stats.py  steganalysis.py  stegano_demo.py
code/kivy/.buildozer/: state.db
code/kivy/.buildozer/android/app/: main.pyo  sitecustomize.pyo  stegano_demo.py  stegano_demo.pyo
cr/icip/: #refs.bib#  .#refs.bib  icip.aux  icip.bbl  icip.blg  icip.run.xml  icip.tex  icip.tex_bak  refs.bib
